this is the stuff we worked on in campus today , plus some movement of files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
+
+#login information
+loggingservice.username = ce
+loggingservice.password = ce1
